# rust-mistralvllm-chat

./: Cargo.toml  Makefile  README.md
config/: config.json
src/: main.rs
src/cli/: schema.rs
src/prompt/: parser.rs
