[package]
name = "rust-mistralvllm-chat"
version = "0.1.1"
edition = "2024"
authors = ["Luigi Mario Zuccarelli"]

[features]
cuda = ["mistralrs-core/cuda"]
cudnn = ["mistralrs-core/cudnn"]
flash-attn = [
  "cuda",
  "mistralrs-core/flash-attn",
]
accelerate = ["mistralrs-core/accelerate"]

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full","rt-multi-thread"] }
mistralrs = { path  = "../mistral.rs/mistralrs/" }
mistralrs-core = { path = "../mistral.rs/mistralrs-core/" }
clap = { version = "4.5.50", features = ["derive"] }
serde = "1.0.228"
serde_json = "1.0.145"
serde_derive = "1.0.228"
custom-logger = { git = "https://github.com/lmzuccarelli/rust-custom-logger", branch = "main", version = "0.2.0" }

[profile.release]
strip = true # Strip symbols from the binary
opt-level = "s" # Optimize for size
lto = true # Enable link-time optimization
codegen-units = 1 # Mazimize size reduction optimization

